// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkeletonLoader Snapshot tests should match snapshot for agents variant 1`] = `
<div
  class="space-y-4"
>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-20 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-3"
    >
      <div
        class="w-12 h-12 bg-slate-300 dark:bg-slate-600 rounded-full flex-shrink-0"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 bg-slate-300 dark:bg-slate-600 rounded w-1/2"
        />
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-20 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-3"
    >
      <div
        class="w-12 h-12 bg-slate-300 dark:bg-slate-600 rounded-full flex-shrink-0"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 bg-slate-300 dark:bg-slate-600 rounded w-1/2"
        />
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-20 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-3"
    >
      <div
        class="w-12 h-12 bg-slate-300 dark:bg-slate-600 rounded-full flex-shrink-0"
      />
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="h-4 bg-slate-300 dark:bg-slate-600 rounded w-1/2"
        />
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader Snapshot tests should match snapshot for chatHistory variant 1`] = `
<div
  class="space-y-4"
>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-12 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-2"
    >
      <div
        class="w-6 h-6 bg-slate-300 dark:bg-slate-600 rounded flex-shrink-0"
      />
      <div
        class="flex-1 space-y-1"
      >
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
        <div
          class="h-2 bg-slate-300 dark:bg-slate-600 rounded w-1/3"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-12 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-2"
    >
      <div
        class="w-6 h-6 bg-slate-300 dark:bg-slate-600 rounded flex-shrink-0"
      />
      <div
        class="flex-1 space-y-1"
      >
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
        <div
          class="h-2 bg-slate-300 dark:bg-slate-600 rounded w-1/3"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-12 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-2"
    >
      <div
        class="w-6 h-6 bg-slate-300 dark:bg-slate-600 rounded flex-shrink-0"
      />
      <div
        class="flex-1 space-y-1"
      >
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
        <div
          class="h-2 bg-slate-300 dark:bg-slate-600 rounded w-1/3"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-12 rounded-md
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-center p-3 space-x-2"
    >
      <div
        class="w-6 h-6 bg-slate-300 dark:bg-slate-600 rounded flex-shrink-0"
      />
      <div
        class="flex-1 space-y-1"
      >
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
        />
        <div
          class="h-2 bg-slate-300 dark:bg-slate-600 rounded w-1/3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader Snapshot tests should match snapshot for games variant 1`] = `
<div
  class="space-y-4"
>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-64 rounded-lg
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex flex-col p-4 space-y-3"
    >
      <div
        class="flex-1 bg-slate-300 dark:bg-slate-600 rounded"
      />
      <div
        class="h-4 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
      />
      <div
        class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-full"
      />
      <div
        class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-5/6"
      />
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-64 rounded-lg
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex flex-col p-4 space-y-3"
    >
      <div
        class="flex-1 bg-slate-300 dark:bg-slate-600 rounded"
      />
      <div
        class="h-4 bg-slate-300 dark:bg-slate-600 rounded w-3/4"
      />
      <div
        class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-full"
      />
      <div
        class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-5/6"
      />
    </div>
  </div>
</div>
`;

exports[`SkeletonLoader Snapshot tests should match snapshot for message variant 1`] = `
<div
  class="space-y-4"
>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-16 rounded-xl
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-start p-3 space-x-3"
    >
      <div
        class="w-10 h-10 bg-slate-300 dark:bg-slate-600 rounded-full flex-shrink-0"
      />
      <div
        class="flex-1 space-y-2 pt-1"
      >
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-full"
        />
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-4/5"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Loading..."
    aria-live="polite"
    class="
            h-16 rounded-xl
            animate-pulse
            bg-slate-200 dark:bg-slate-700
            
          "
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
    <div
      class="h-full flex items-start p-3 space-x-3"
    >
      <div
        class="w-10 h-10 bg-slate-300 dark:bg-slate-600 rounded-full flex-shrink-0"
      />
      <div
        class="flex-1 space-y-2 pt-1"
      >
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-full"
        />
        <div
          class="h-3 bg-slate-300 dark:bg-slate-600 rounded w-4/5"
        />
      </div>
    </div>
  </div>
</div>
`;
